--- a/mediamtx.yml
+++ b/mediamtx.yml
@@ -18,3 +18,6 @@ paths:
   test-id-2222345:
     source: rtsp://user:pass@ip:554/snl/live/1/1/3
     sourceOnDemand: true
+  camera-drone:
+    source: rtsp://admin:123456Ai@192.168.1.120:554/snl/live/1/1/3
+    sourceOnDemand: true
