--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
-    "mqtt": "^5.12.0"
+    "mqtt": "^5.12.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
