--- a/mediamtx.yml
+++ b/mediamtx.yml
@@ -1,13 +1,13 @@
 api: true
-apiAddress: ':9997'
+apiAddress: ":9997"
 rtsp: true
-rtspAddress: ':8554'
+rtspAddress: ":8554"
 protocols:
   - tcp
   - udp
 webrtc: true
-webrtcAddress: ':8889'
-webrtcAllowOrigin: '*'
+webrtcAddress: ":8889"
+webrtcAllowOrigin: "*"
 paths:
   cam1:
     source: rtsp://admin:123456Ai@192.168.1.120:554/snl/live/1/1/3
@@ -19,5 +19,6 @@ paths:
     source: rtsp://user:pass@ip:554/snl/live/1/1/3
     sourceOnDemand: true
   camera-drone:
-    source: rtsp://admin:123456Ai@192.168.1.120:554/snl/live/1/1/3
+    # source: rtsp://admin:123456Ai@192.168.1.120:554/snl/live/1/1/3
+    source: rtsp://admin:123456Ai@192.168.1.73:554/snl/live/1/1
     sourceOnDemand: true
